Blur work & toggle css

--- a/app/index.html
+++ b/app/index.html
@@ -21,18 +21,9 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container">
-      <div class="header">
-        <p class="text-muted">Interactive Map</p>
-      </div>
 
-      <div ng-view=""></div>
-
-      <div class="footer">
-        <p><span ></span>Design and Development by EyeByte Solutions</p>
-      </div>
-    </div>
-
+      <div ng-view="" class="supreme-container"></div>
+  
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
