--- a/app/index.html
+++ b/app/index.html
@@ -22,10 +22,152 @@
 
     <!-- Add your site or application content here -->
 
-      <div ng-view="" class="supreme-container"></div>
+      <div ng-view="main" class="supreme-container" ng-controller="MapCtrl">
+	      <!-- MODAL -->
+<script type="text/ng-template" id="displaySiteData.html">
+<div class="modal-body">
+  <div class="row">
+  <button class="btn btn-default swcos-close glyphicon glyphicon-remove" ng-click="ok()"></button>
+    <div class="col-md-12">
+
+      <div class="row">
+        <!-- left side of modal -->
+        <div class="col-md-5">
+          <h1>{{site.Site}}</h1>
+          <h4>{{site.CSA}}</h4>
+          <p><strong>Website: </strong><a ng-hide="!site.Website" href="{{site.Website}}" target="_blank">{{site.Website}}</a></p>
+          <p><strong>Contact Name: </strong>{{site.Contact}}</p>
+          <p><strong>Contact Email: </strong>{{site['Contact email']}}</p>
+          <p><strong>Contact Phone: </strong>{{site['Site Phone No.']}}</p>
+          <p>{{site['Site Description']}}</p>
+          <p ng-hide="site['Site Description']">No site description provided.</p>
+          <h4>{{stud_sum}} University of Maryland Baltimore Student<span ng-hide="stud_sum == 1">s</span> Involved</h4>
+          <div class="row">
+            <!-- left pie -->
+            <div class="col-md-6">
+              <chartist class="ct-chart ct-golden-section" chartist-data="data" chartist-chart-type="Pie"></chartist>
+              <h4>By School</h4>
+              <ul class="list-group pieChart">
+                <li class="list-group-item" ng-repeat="label in dataBySchool">
+                  <span class="badge">{{label[1]}}</span>
+                    <span class="school-label"></span>{{label[0]}}
+                </li>
+              </ul>
+
+            </div>
+            <!-- right pie -->
+            <div class="col-md-6">
+              <chartist class="ct-chart ct-golden-section" chartist-data="dataDiscipline" chartist-chart-type="Pie"></chartist>
+              <h4>By Discipline</h4>
+              <ul class="list-group pieChart">
+                <li class="list-group-item" ng-repeat="label in dataByDiscipline">
+                  <span class="badge">{{label[1]}}</span>
+                    <span class="school-label"></span>{{label[0]}}
+                </li>
+              </ul>
+
+            </div>
+          </div>
+        </div>
+        <!-- middle spacer -->
+        <div class="col-md-2">
+        </div>
+        <!-- right side of modal - bar charts -->
+        <div class="col-md-5">
+          <h1>What&#39s Happening In {{site.CSA}}</h1>
+          <div class="bar-wrapper">
+            <h4>Median Income</h4>
+            <p class="description">Blurb goes here</p>
+            <chartist class="ct-chart ct-golden-section" chartist-data="incomeData" chartist-events="" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
+          </div>
+          <div class="bar-wrapper">
+            <h4>School Absenteeism</h4>
+            <p class="description">Blurb goes here</p>
+            <chartist class="ct-chart ct-golden-section" chartist-data="schoolData" chartist-events="" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
+          </div>
+          <div class="bar-wrapper bw-last">
+            <h4>Life Expectancy</h4>
+            <p class="description">Blurb goes here</p>
+            <chartist class="ct-chart ct-golden-section" chartist-data="lifeData" chartist-events="" chartist-chart-type="Bar" chartist-chart-options="barOptions" chartist-responsive-options="barResponsiveOptions"></chartist>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+</script>
+<!-- END MODAL -->
+
+<!-- MAP -->
+<div class="container">
+	<div class="row">
+	<h2>University of Maryland Baltimore: Students Working in Baltimore</h2>
+	</div>
+  <div class="row">
 
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+
+        <p class="sponsor">Interactive Map provided in thanks to a generous grant from the
+        Joseph and Harvey Meyerhoff Family Charitable Funds and the Social Work Community Outreach Service (SWCOS)</p>
+
+
+
+    <div class="col-md-9">
+	  <div class="colWrap">
+      <div class="instructions">Click on a yellow marker within the map to display information about individual Sites</div>
+
+      <ui-gmap-google-map center='map.center' zoom='map.zoom' options="map.mapOptions">
+
+        <ui-gmap-markers models="siteMarkers" click="'displaySiteData'" coords="'self'" icon="'icon'">
+        </ui-gmap-markers>
+
+      </ui-gmap-google-map>
+    </div>
+    </div>
+
+    <div class="col-md-3 col-sm-6">
+	    <div class="colWrap">
+      <p class="help-block">Filter By School</p>
+      <ul class="list-group">
+        <li class="list-group-item" ng-repeat="school in siteSchools">
+          <div class="row">
+            <div class="col-md-6" style="padding-top:2%;">
+              <p>{{school}}<p>
+            </div>
+            <div class="col-md-6">
+              <input id="{{school}}" class="school" type="checkbox" ng-click="toggleSchool(school)">
+              <label class="school__label" for="{{school}}"></label>
+            </div>
+          </div>
+        </li>
+      </ul>
+      </div>
+
+	  	<div class="colWrap">
+        <p class="help-block">Filter By Affiliate</p>
+        <ul class="list-group">
+          <li class="list-group-item" ng-repeat="affiliate in siteAffiliates">
+            <div class="row">
+              <div class="col-md-6" style="padding-top:2%;">
+                <p>{{affiliate}}</p>
+              </div>
+              <div class="col-md-6" style="padding-top:3%;">
+                <input id="{{affiliate}}" class="school" type="checkbox" ng-click="toggleSchool(affiliate)" >
+                <label id="test" class="school__label" for="{{affiliate}}"></label>
+              </div>
+            </div>
+          </li>
+        </ul>
+	  	</div>
+      </div>
+  </div>
+</div>
+
+      </div>
+
+
+    <!-- Google Analytics: changeX to be your site's ID -->
      <script>
        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -58,7 +200,7 @@
     <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
     <script src="bower_components/chartist/dist/chartist.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <!-- script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script -->
     <script src="bower_components/angular-chartist.js/dist/angular-chartist.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
