remove glph call

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 <script type="text/ng-template" id="displaySiteData.html">
 <div class="modal-body UMBmapApplicationModal">
   <div class="row">
-  <button class="btn btn-default swcos-close glyphicon glyphicon-remove" ng-click="ok()"></button>
+  <button class="btn btn-default swcos-close" ng-click="ok()">x</button>
     <div class="col-md-12">
 
       <div class="row">
