--- a/app/index.html
+++ b/app/index.html
@@ -232,7 +232,7 @@
     <script src="bower_components/chartist/dist/chartist.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="bower_components/angular-chartist.js/dist/ng-chartist.js"></script>
+    <script src="bower_components/angular-chartist.js/dist/angular-chartist.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
