--- a/app/index.html
+++ b/app/index.html
@@ -135,7 +135,7 @@
 <!-- END MODAL -->
 
 <!-- MAP -->
-<div class="container">
+<div class="containerMappingApp">
 	<div class="row">
 	<h2>University of Maryland Baltimore: Students Working in Baltimore</h2>
 	</div>
