--- a/embed.html
+++ b/embed.html
@@ -129,7 +129,7 @@
 <!-- END MODAL -->
 
 <!-- MAP -->
-<div class="container">
+<div class="containerMappingApp">
 	<div class="row">
 	<h2>University of Maryland Baltimore: Students Working in Baltimore</h2>
 	</div>
