--- a/app/index.html
+++ b/app/index.html
@@ -160,7 +160,7 @@
     <div class="col-md-3 col-sm-6">
 	    <div class="colWrap">
       <p class="filter-title">Filter By School</p>
-      <ul class="list-group">
+      <ul id="schoolsList" class="list-group">
         <li class="list-group-item" ng-repeat="school in siteSchools">
           <div class="row">
             <div class="col-md-6" style="padding-top:2%;">
@@ -177,7 +177,7 @@
 
 	  	<div class="colWrap">
         <p class="filter-title">Filter By Affiliate</p>
-        <ul class="list-group">
+        <ul id="affilsList" class="list-group">
           <li class="list-group-item" ng-repeat="affiliate in siteAffiliates">
             <div class="row">
               <div class="col-md-6" style="padding-top:2%;">
