--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
     <!-- endbuild -->
   </head>
   <body>
-
+test
 
 <div ng-view="main" class="UMBmapApplication supreme-container " ng-controller="MapCtrl" ng-app="swcosClientMapApp">
 <!-- MODAL -->
